# Flightwise

./: Dockerfile  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
Frontend/: package-lock.json  package.json
Frontend/src/: App.css  App.jsx  Footer.jsx  main.jsx
Translator_Frontend/: package-lock.json  package.json
Translator_Frontend/src/: App.css  App.jsx
src/: main.ipynb  main.py  train.py
