[tool.poetry]
name = "flightwise"
version = "0.1.0"
description = ""
authors = ["Cong Minh Vu <vumirek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
